# certificate-orchestrator-proxy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .python-version  ADMIN_API_IMPLEMENTATION.md  ADMIN_API_WEB_UI_PROPOSAL.md  CONCURRENT_WRITE_ANALYSIS.md  CONCURRENT_WRITE_SUMMARY.md  DECISION_SUMMARY.md  Discussion.txt  Dockerfile  HACKATHON_README.md  IMPLEMENTATION_QUICK_START.md  LICENSE  Prompt.md  README.md  README_ADMIN_API.md  README_ADMIN_API_COMPLETE.md  SQLITE_VS_POSTGRESQL.md  config.yaml.example  docker-compose.yml  enrollment.example.yaml  pyproject.toml  renewal.example.yaml  test_config.yaml
.github/workflows/: ci.yml  docker.yml
.pre-commit-hooks/: prevent-main-commits.sh
est_adapter/: __init__.py  config.py  database.py  exceptions.py  main.py
est_adapter/admin/: database.py  dependencies.py  main.py
est_adapter/admin/api/: __init__.py  ca_backends.py  enrollment_events.py  est_profiles.py  status.py
est_adapter/admin/models/: __init__.py  base.py  ca_backend.py  enrollment_event.py  est_profile.py
est_adapter/admin/repository/: __init__.py  base.py  ca_backend.py  enrollment_event.py  est_profile.py
est_adapter/admin/schemas/: __init__.py  ca_backend.py  common.py  enrollment_event.py  est_profile.py
est_adapter/audit/: __init__.py  logger.py
est_adapter/auth/: __init__.py  handler.py
est_adapter/ca/: __init__.py  acme_client.py  backend.py  scep_client.py
est_adapter/client/: __init__.py  enroll_device.py  est_client.py
est_adapter/crypto/: __init__.py  cert.py  csr.py
est_adapter/routes/: __init__.py  est.py
est_adapter/validation/: __init__.py  policy.py
scripts/: add-device-user.py  demo-enrollment.sh  generate-certs.sh  setup-hackathon.sh
tests/: __init__.py  test_acme_backend.py  test_acme_client.py  test_admin_api.py  test_admin_schemas.py  test_auth.py  test_ca_backend.py  test_crypto.py  test_database.py  test_est_client.py  test_integration.py  test_repository.py  test_routes.py  test_scep_backend.py  test_scep_client.py  test_validation.py
