[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "est-adapter"
version = "0.1.0"
description = "EST protocol adapter for medical device certificate management"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Stuart Swerdloff" },
    { name = "Cyril (9137f1ee)" },
]
keywords = ["EST", "RFC7030", "certificates", "medical", "DICOMWeb", "mTLS"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "cryptography>=44.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "loguru>=0.7.0",
    "bcrypt>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.14.10",
    "mypy>=1.19.1",
    "pre-commit>=4.0.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
est-adapter = "est_adapter.main:main"

[tool.hatch.build.targets.wheel]
packages = ["est_adapter"]

[tool.ruff]
line-length = 127
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TRY",    # tryceratops
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "LOG",    # flake8-logging
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "RUF",    # Ruff-specific
]
ignore = [
    "S101",    # assert statements OK in tests
    "PLR0913", # too many arguments - sometimes unavoidable in APIs
    "COM812",  # trailing commas - conflicts with ruff format
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",    # assert statements OK in tests
    "ARG001",  # unused arguments OK in test fixtures
    "PLR2004", # magic values OK in tests
    "PLC0415", # import inside function - needed for test isolation with mocking
    "S505",    # weak crypto keys intentional in tests for speed
    "TCH",     # type-checking imports less critical in tests
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["uvicorn.*", "loguru.*", "cryptography.*", "pytest.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring CA setup",
]

[tool.coverage.run]
source = ["est_adapter"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "pytest-json-report>=1.5.0",
]
